daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mydaemon
spec:
  selector:
    matchLabels:
      name: fluentd
  template:
    metadata:
      labels:
        name: fluentd
    spec:
      containers:
      - name: con1
        image: nginx
