node-aff-pref.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp
    env: dev
  name: test 
  annotations:
     describe: "test application"
spec:
  containers:
  - image: 966145/myserver121:latest
    name: con1
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "64Mi"
        cpu: "90m"
      limits:
        memory: "128Mi"
        cpu: "180m"
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: cpu
            operator: NotIn
            values:
            - ryzen
