node-selc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp
    env: dev
  name: test 
  annotations:
     describe: "test application"
spec:
  containers:
  - image: 966145/myserver121:latest
    name: con1
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "64Mi"
        cpu: "90m"
      limits:
        memory: "128Mi"
        cpu: "180m"
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080
  nodeSelector:
    cpu: ryzen
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: test-svc
#spec:
#  ports:
#  - port: 80
#    nodePort: 30123
#  selector:
#    app: myapp
#  type: NodePort
