pod-aff-pre.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: dev
  name: pod-aff-pref
  annotations:
     describe: "test application"
spec:
  containers:
  - image: 966145/myserver121:latest
    name: con1
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "64Mi"
        cpu: "90m"
      limits:
        memory: "128Mi"
        cpu: "180m"
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: app
              operator: In
              values:
              - myapp
          topologyKey: kubernetes.io/hostname
