security-context.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
    name: my-dep
spec:
   replicas: 1
   selector:
     matchLabels:
       app: myapp
   template:
     metadata:
        labels:
           app: myapp
     spec:
        securityContext:
          runAsUser: 1000
        containers:
        - name: con1
          image: ubuntu:latest
          command: ["sleep","1000"]
          securityContext:
            runAsUser: 2000
        - name: con2
          image: ubuntu:latest
          command: ["sleep","1000"]
