http-liveness.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
    name: my-dep
spec:
   replicas: 3
   selector:
     matchLabels:
       app: myapp
   template:
     metadata:
        labels:
           app: myapp
     spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
        - name: con2
          image: tomcat:latest
          ports:
          - containerPort: 8080
---
---
apiVersion: v1
kind: Service
metadata:
  name: myrc-svc
spec:
  ports:
  - port: 80
  selector:
    app: myapp
