init-container.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
    name: my-dep
spec:
   replicas: 4
   selector:
     matchLabels:
       app: myapp
   template:
     metadata:
        labels:
           app: myapp
     spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80
          volumeMounts:
          - name: myvol
            mountPath: /usr/share/nginx/html
        volumes:
        - name: myvol
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: myrc-svc
spec:
  ports:
  - port: 80
    nodePort: 30123
  selector:
    app: myapp
  type: NodePort
