rc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myrc-svc
spec:
  ports:
  - port: 80
    nodePort: 30123
  selector:
    app: myapp
  type: NodePort
