ingress.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
    name: my-dep
spec:
   replicas: 3
   selector:
     matchLabels:
       app: myapp
   template:
     metadata:
        labels:
           app: myapp
     spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myrc-svc
spec:
  ports:
  - port: 80
  selector:
    app: myapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mydep-ing
spec:
  ingressClassName: nginx
  rules:
  - host: "aneesh.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myrc-svc
            port:
              number: 80
